--- a/style.css
+++ b/style.css
@@ -94,7 +94,11 @@ header .content .cont_bx h1{
 header .content .cont_bx p{
    font-size: 14px;
    font-weight: 400;
-   color: rgb(241,241,241);
+   color: white;
+   background: rgb(121, 120, 120);
+   border-radius: 20px;
+   padding: 10px 10px 10px 10px;
+   backdrop-filter: blur(2px);
 
 }
 header .content .cont_bx button{
@@ -245,6 +249,14 @@ header .trip_bx .search_bx{
  header .trip_bx .travel_bx .cards .card img{
     width: 100%;
     height: 65%;
+    transition: .3s ease-in-out;
+ }
+
+
+ header .trip_bx .travel_bx .cards .card img:hover{
+    transform: scale(1.03);
+    transition: .3s ease-in-out;
+    cursor: pointer;
  }
 
  header .trip_bx .travel_bx .cards .card .btn_city{
